--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://m-vojjala.github.io/my-portfolio/",
+  "homepage": "https://m-vojjala.github.io/my-portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -45,5 +45,5 @@
   "devDependencies": {
     "gh-pages": "^3.1.0"
   },
-  "sideEffects": "true"
+  "sideEffects": "false"
 }
